--- a/css/editor-styles.css
+++ b/css/editor-styles.css
@@ -7,7 +7,7 @@
 	padding: .25em .4em;
 	font-size: 75%;
 	font-weight: 700;
-	line-height: 1;
+	line-height: 1em;
 	text-align: center;
 	white-space: nowrap;
 	vertical-align: baseline;
